Fix nav button padding on smaller screen sizes.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -866,6 +866,10 @@ html {
 
                         #nav-links {
                             margin-bottom: 0;
+
+                            .btn {
+                                padding: 14px 10px;
+                            }
                         }
 
                         #social-links {
